--- a/index.html
+++ b/index.html
@@ -108,28 +108,28 @@
         <footer>
             <!--© LeoN61 2018-->
             <a href="https://www.facebook.com/LeoN61">
-                <img src="/images/social/facebook.png" alt="facebook logo" height="30">
+                <img src="images/social/facebook.png" alt="facebook logo" height="30">
             </a>
             <a href="https://plus.google.com/u/0/+ValeriyUnknown">
-                <img src="/images/social/google.png" alt="google plus logo" height="30">
+                <img src="images/social/google.png" alt="google plus logo" height="30">
             </a>
             <a href="https://www.instagram.com/leon61_/">
-                <img src="/images/social/instagram.png" alt="instagram logo" height="30">
+                <img src="images/social/instagram.png" alt="instagram logo" height="30">
             </a>
             <a href="https://www.linkedin.com/in/valeriy-yurchenko/">
-                <img src="/images/social/linkedin.png" alt="linkedin logo" height="30">
+                <img src="images/social/linkedin.png" alt="linkedin logo" height="30">
             </a>
             <a href="skype:leon61_1992">
-                <img src="/images/social/skype.png" alt="skype logo" height="30">
+                <img src="images/social/skype.png" alt="skype logo" height="30">
             </a>
             <a href="https://twitter.com/LeoN61_">
-                <img src="/images/social/twitter.png" alt="twitter logo" height="30">
+                <img src="images/social/twitter.png" alt="twitter logo" height="30">
             </a>
             <a href="https://vimeo.com/leon61">
-                <img src="/images/social/vimeo.png" alt="vimeo logo" height="30">
+                <img src="images/social/vimeo.png" alt="vimeo logo" height="30">
             </a>
             <a href="https://www.youtube.com/user/leon61valeriy/">
-                <img src="/images/social/youtube.png" alt="youtube logo" height="30">
+                <img src="images/social/youtube.png" alt="youtube logo" height="30">
             </a>
         </footer>
     </body>
